# autoptim

./: .gitignore  CONTRACT.md  README.md  pyproject.toml
autoptim/: cli.py  config.py  orchestrator.py  runspec.py
autoptim/evaluator/: base.py  custom.py  schema_match.py
autoptim/meta/: agent.py  providers.py  strategy_scheduler.py
autoptim/meta/prompts/: iteration.j2  strategies.md  system.j2
autoptim/storage/: diff.py  run_store.py
autoptim/util/: cost.py  logging.py
autoptim/worker/: ollama_client.py  runner.py  sandbox.py
examples/invoice_extraction/: ground_truth.jsonl  seed_process.py  task.yaml  task_groq.yaml
examples/invoice_extraction/inputs/: inv_001.txt  inv_002.txt  inv_003.txt  inv_004.txt  inv_005.txt  inv_006.txt  inv_007.txt  inv_008.txt  inv_009.txt  inv_010.txt
examples/maze_solver/: README.md  build_dataset.py  eval.py  ground_truth.jsonl  seed_process.py  task.yaml
examples/maze_solver/inputs/: maze_0001.json  maze_0002.json  maze_0003.json  maze_0004.json  (+16 more)
examples/quadratic_nn/: README.md  build_dataset.py  eval.py  ground_truth.jsonl  seed_process.py  task.yaml
examples/regex_synth/: README.md  eval.py  ground_truth.jsonl  seed_process.py  task.yaml  task_groq.yaml
examples/sql_from_nl/: README.md  task.yaml
examples/support_triage/: README.md  ground_truth.jsonl  seed_process.py  task.yaml  task_groq.yaml
tests/: test_cloud_worker.py  test_config.py  test_meta_contract.py  test_ollama_client.py  test_orchestrator.py  test_providers.py  test_run_store.py  test_sandbox.py  test_schema_match.py  test_strategy_scheduler.py
(+122 files in other folders)
