[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoptim"
version = "0.1.0"
description = "Generic agentic loop harness that continuously improves a verifiable process."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "autoptim" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
    "rapidfuzz>=3.6",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
autoptim = "autoptim.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoptim*"]
exclude = ["tests*", "examples*", "runs*", "tasks*"]

[tool.setuptools.package-data]
"autoptim.meta" = ["prompts/*.j2", "prompts/*.md"]
